# jupyter-test

./: .gitignore  README.md  pyproject.toml
assets/data/: candlestick1.json  table_cn.json
config/: nginx-wsl.conf  nginx.conf
data/mingri/: 4-23_jd.csv  5-17_grade.xls  5-19_sales.xls  5-5_tiwen.xls  5-6_course.xls  product_type.csv  shuangseqiu.csv
demo/: test.py  test6.ipynb
demo/bar/: bar2.ipynb
demo/base/: test.py  testBase.py
demo/cipher/: DESUtil.py  test.py
demo/excel/: test1.py
demo/jupyter/: base.ipynb  merge.ipynb  stack.ipynb  test1.ipynb  test2.ipynb  test4.ipynb  test5.ipynb  test6.ipynb  test7.ipynb
demo/line/: test1.py  test2.py
demo/llm/: README.md  base1.ipynb  base2.ipynb  demo1.py  demo2.py  embedding.ipynb  selector.ipynb  vctordb.ipynb
demo/network/: test.json  test1.ipynb  test1.py  test2.py
demo/pandas/: excel.py  group.ipynb
demo/test/: test1.ipynb  test3.ipynb  test5.ipynb
demo/tools/: MysqlSchemaTool.py  db_tool.py  print.py  test1.py
html/: index.html
html/d3/: bar-chart.html  candlestick-chart.html  line-chart.html  pie-chart.html  test.html
pandas-test/: test.py  test1.ipynb  test2.py  test6.ipynb  testBase.py
pandas-test/base/: testBase.py
pandas-test/test/: test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test5.ipynb
python/base/: test.py
python/excel/: ott_channel.py  test1.py
python/langchain/: ollama1.py  tongyi1.py  tongyi2.py
python/tools/: db_tool.py
script/: clash-test.yaml  clash-timiwo-2.yaml  clash-timiwo.yaml  gost.sh  install-vpn.sh
shell/: array.sh  common.sh  loop.sh  print.sh
(+69 files in other folders)
